--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          <ul>
            <li><a href="#">Глвная</a></li>
            <li><a href="#">Компания</a></li>
-           <li><a href="#">Каталог</a></li>
+           <li><a href="catalog.html">Каталог</a></li>
            <li><a href="#">Новости</a></li>
            <li><a href="#">Спецпредложения</a></li>
            <li><a href="#">Доставка</a></li>
@@ -79,7 +79,7 @@
       <p>Настоящие мужские игрушки</p>
       </div>
        <a class="slide-btn" href="#">Открыть каталог</a>
-       <img src="img/Slide1.jpg" alt="Perforators" width="618" height="280">
+       <img src="img/Slide1.jpg" alt="Perforators" width="618" height="260">
        <span class="icon-left"></span>
        <span class="icon-right"></span>
      </div>
@@ -192,7 +192,7 @@
           <p>Мы с удовольствием доставим ваш товар прямо 
             к вашему подъезду совершенно бесплатно!
             Ведь мы неплохо заработаем, 
-            поднимая его на ваш этаж!</p>
+            <br>поднимая его на ваш этаж!</p>
         </div>
         <img src="img/delivery-car.png" alt="car" width="467" height="261">
          </div>
