--- a/catalog.html
+++ b/catalog.html
@@ -42,9 +42,9 @@
        </div>
        <div class="main-nav-navigation">
          <ul>
-           <li><a href="#">Глвная</a></li>
+           <li><a href="index.html">Глвная</a></li>
            <li><a href="#">Компания</a></li>
-           <li><a href="#">Каталог</a></li>
+           <li><a>Каталог</a></li>
            <li><a href="#">Новости</a></li>
            <li><a href="#">Спецпредложения</a></li>
            <li><a href="#">Доставка</a></li>
