--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <p>Настоящие мужские игрушки</p>
       </div>
        <a class="slide-btn" href="#">Открыть каталог</a>
-       <img src="img/Slide1.jpg" alt="Perforators" width="618" height="260">
+       <img src="img/Slide1.jpg" alt="Perforators" width="618" height="280">
        <span class="icon-left"></span>
        <span class="icon-right"></span>
      </div>
@@ -96,7 +96,7 @@
      </div>
      </div>
     </section>
-    <section class="container popular-goods">
+    <section class="popular-goods">
       <div class="popular-goods-title">
        <!--Основное содержание: популярные товары-->
         <h2>Популярные товары:</h2>
